tags/r1.3/take/src/nz/org/take/script/parser/Parser.java
/* Generated By:JavaCC: Do not edit this line. Parser.java */
   package nz.org.take.script.parser;
        import nz.org.take.script.*;
        public class Parser implements ParserConstants {
                Script select = new Script();
                public static void main(String[] args) throws ParseException,TokenMgrError {
                        Parser parser = new Parser(System.in);
                        parser.parse(new Script());
                }

  static final public void parse(Script script) throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
      case REF:
      case QUERY:
      case EXTERNAL:
      case AGGREGATION:
      case COMMENT:
      case GLOBALANNOTATION:
      case LOCALANNOTATION:
      case LABEL:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        var(script);
        break;
      case REF:
        ref(script);
        break;
      case COMMENT:
        comment(script);
        break;
      case LOCALANNOTATION:
        globalannotation(script);
        break;
      case GLOBALANNOTATION:
        localannotation(script);
        break;
      case AGGREGATION:
        aggregation(script);
        break;
      case QUERY:
        query(script);
        break;
      case EXTERNAL:
        factStore(script);
        break;
      case LABEL:
        rule(script);
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void localannotation(Script script) throws ParseException {
        Token t;
         Annotation a = new Annotation();
    t = jj_consume_token(GLOBALANNOTATION);
         a.setGlobal(true);
         a.setAnnotation(t.image.substring(2));
         a.setPosition(t.beginLine,t.beginColumn);
         script.add(a);
  }

  static final public void globalannotation(Script script) throws ParseException {
        Token t;
         Annotation a = new Annotation();
    t = jj_consume_token(LOCALANNOTATION);
         a.setGlobal(false);
         a.setAnnotation(t.image.substring(1));
         a.setPosition(t.beginLine,t.beginColumn);
         script.add(a);
  }

  static final public void comment(Script script) throws ParseException {
        Token t;
         Comment c = new Comment();
    t = jj_consume_token(COMMENT);
         c.setText(t.image.substring(2));
         c.setPosition(t.beginLine,t.beginColumn);
         script.add(c);
  }

  static final public void query(Script script) throws ParseException {
        Token t;
         QuerySpec q = new QuerySpec();
    t = jj_consume_token(QUERY);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      negated(q);
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
    predicateQ(q);
    jj_consume_token(37);
    io(q);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      io(q);
    }
    jj_consume_token(38);
         q.setPosition(t.beginLine,t.beginColumn);
         script.add(q);
  }

  static final public void aggregation(Script script) throws ParseException {
        Token t;
         Aggregation a = new Aggregation();
    jj_consume_token(AGGREGATION);
    name(a);
    jj_consume_token(EQ);
    aggfunction(a);
    aggvar(a);
    aggcondition(a);
         script.add(a);
  }

  static final public void aggvar(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         a.setVariable(t.image);
  }

  static final public void aggfunction(Aggregation a) throws ParseException {
        Token t;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case AVG:
      avg(a);
      break;
    case MIN:
      min(a);
      break;
    case MAX:
      max(a);
      break;
    case COUNT:
      count(a);
      break;
    case SUM:
      sum(a);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void avg(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(AVG);
         a.setFunction(t.image);
  }

  static final public void min(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(MIN);
         a.setFunction(t.image);
  }

  static final public void max(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(MAX);
         a.setFunction(t.image);
  }

  static final public void count(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(COUNT);
         a.setFunction(t.image);
  }

  static final public void sum(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(SUM);
         a.setFunction(t.image);
  }

  static final public void name(Aggregation a) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         a.setName(t.image);
  }

  static final public void negated(QuerySpec q) throws ParseException {
        Token t;
    t = jj_consume_token(NOT);
         q.setNegated(true);
  }

  static final public void predicateQ(QuerySpec q) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         q.setPredicate(t.image);
  }

  static final public void io(QuerySpec q) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IN:
      in(q);
      break;
    case OUT:
      out(q);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void in(QuerySpec q) throws ParseException {
        Token t;
    t = jj_consume_token(IN);
         q.addToIOSpec(true);
  }

  static final public void out(QuerySpec q) throws ParseException {
        Token t;
    t = jj_consume_token(OUT);
         q.addToIOSpec(false);
  }

  static final public void var(Script script) throws ParseException {
        Token t;
         VariableDeclaration v = new VariableDeclaration();
    t = jj_consume_token(VAR);
    dectype(v);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_3;
      }
      jj_consume_token(DOT);
      dectype(v);
    }
    decname(v);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_4;
      }
      jj_consume_token(COMMA);
      decname(v);
    }
         v.setPosition(t.beginLine,t.beginColumn);
         script.add(v);
  }

  static final public void ref(Script script) throws ParseException {
        Token t;
         RefDeclaration r = new RefDeclaration();
    t = jj_consume_token(REF);
    dectype(r);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_5;
      }
      jj_consume_token(DOT);
      dectype(r);
    }
    decname(r);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      jj_consume_token(COMMA);
      decname(r);
    }
         r.setPosition(t.beginLine,t.beginColumn);
         script.add(r);
  }

  static final public void dectype(Declaration d) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         d.addToType(t.image);
  }

  static final public void decname(Declaration d) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         d.addName(t.image);
  }

  static final public void rule(Script script) throws ParseException {
         Rule r = new Rule();
    id(r);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      jj_consume_token(IF);
      condition(r);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case AND:
          ;
          break;
        default:
          jj_la1[10] = jj_gen;
          break label_7;
        }
        jj_consume_token(AND);
        condition(r);
      }
      jj_consume_token(THEN);
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
    condition(r);
         script.add(r);
  }

  static final public void factStore(Script script) throws ParseException {
         FactStore fs = new FactStore();
    jj_consume_token(EXTERNAL);
    id(fs);
    predicateName(fs);
    jj_consume_token(37);
    className(fs);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_8;
      }
      jj_consume_token(COMMA);
      className(fs);
    }
    jj_consume_token(38);
         script.add(fs);
  }

  static final public void id(Identifiable r) throws ParseException {
        Token t;
    t = jj_consume_token(LABEL);
         r.setId(t.image.substring(0,t.image.length()-1));
  }

  static final public void predicateName(FactStore fs) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         fs.setPredicate(t.image);
  }

  static final public void className(FactStore fs) throws ParseException {
        Token t;
         fs.nextClass();
    classNameToken(fs);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_9;
      }
      jj_consume_token(DOT);
      classNameToken(fs);
    }
  }

  static final public void classNameToken(FactStore fs) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         fs.addToClassName(t.image);
  }

  static final public void condition(Rule r) throws ParseException {
         Condition c = new Condition();
    buildCondition(c);
         r.add(c);
  }

  static final public void aggcondition(Aggregation a) throws ParseException {
         Condition c = new Condition();
    buildCondition3(c);
         a.setCondition(c);
  }

  static final public void buildCondition(Condition c) throws ParseException {
    if (jj_2_1(2147483647)) {
      buildCondition2(c);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_NUMBER:
      case DECIMAL_NUMBER:
      case NAME:
      case STRING_LITERAL:
      case ARITHMETICOPERATION:
        buildCondition1(c);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void buildCondition1(Condition c) throws ParseException {
    term(c);
    comparison(c);
    term(c);
  }

  static final public void buildCondition2(Condition c) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      negation(c);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    predicate(c);
    jj_consume_token(37);
    terms(c);
    jj_consume_token(38);
  }

  static final public void buildCondition3(Condition c) throws ParseException {
    predicate(c);
    jj_consume_token(37);
    terms(c);
    jj_consume_token(38);
  }

  static final public void negation(Condition c) throws ParseException {
        Token t;
    t = jj_consume_token(NOT);
         c.setNegated(true);
  }

  static final public void terms(TermContainer c) throws ParseException {
    term(c);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[16] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      term(c);
    }
  }

  static final public void term(TermContainer c) throws ParseException {
    if (jj_2_2(3)) {
      complexTerm(c);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INTEGER_NUMBER:
      case DECIMAL_NUMBER:
      case NAME:
      case STRING_LITERAL:
        simpleTerm(c);
        break;
      default:
        jj_la1[17] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void simpleTerm(TermContainer c) throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      variableTerm(c);
      break;
    case STRING_LITERAL:
      stringLiteral(c);
      break;
    case INTEGER_NUMBER:
      intLiteral(c);
      break;
    case DECIMAL_NUMBER:
      doubleLiteral(c);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void variableTerm(TermContainer c) throws ParseException {
        Token t;
         VariableTerm v = new VariableTerm();
    variableToken(v);
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_11;
      }
      jj_consume_token(DOT);
      variableToken(v);
    }
         c.add(v);
  }

  static final public void variableToken(VariableTerm v) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         v.addName(t.image);
         v.setPosition(t.beginLine,t.beginColumn);
  }

  static final public void stringLiteral(TermContainer c) throws ParseException {
        Token t;
         ConstantTerm v = new ConstantTerm();
    t = jj_consume_token(STRING_LITERAL);
         v.setValue(t.image.substring(1,t.image.length()-1));
         v.setType("java.lang.String");
         v.setPosition(t.beginLine,t.beginColumn);
         c.add(v);
  }

  static final public void intLiteral(TermContainer c) throws ParseException {
        Token t;
         ConstantTerm v = new ConstantTerm();
    t = jj_consume_token(INTEGER_NUMBER);
         v.setValue(t.image);
         v.setType("java.lang.Integer");
         v.setPosition(t.beginLine,t.beginColumn);
         c.add(v);
  }

  static final public void doubleLiteral(TermContainer c) throws ParseException {
        Token t;
         ConstantTerm v = new ConstantTerm();
    t = jj_consume_token(DECIMAL_NUMBER);
         v.setValue(t.image);
         v.setType("java.lang.Double");
         v.setPosition(t.beginLine,t.beginColumn);
         c.add(v);
  }

  static final public void complexTerm(TermContainer c) throws ParseException {
         ComplexTerm ct = new ComplexTerm();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      function(ct);
      break;
    case ARITHMETICOPERATION:
      arithmeticoperation(ct);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(39);
    terms(ct);
    jj_consume_token(40);
         c.add(ct);
  }

  static final public void function(ComplexTerm ct) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         ct.setPosition(t.beginLine,t.beginColumn);
         ct.setFunction(t.image);
  }

  static final public void arithmeticoperation(ComplexTerm ct) throws ParseException {
        Token t;
    t = jj_consume_token(ARITHMETICOPERATION);
         ct.setPosition(t.beginLine,t.beginColumn);
         ct.setFunction(t.image);
  }

  static final public void predicate(Condition c) throws ParseException {
        Token t;
    t = jj_consume_token(NAME);
         c.setPosition(t.beginLine,t.beginColumn);
         c.setPredicate(t.image);
         c.setPrimitiveComparison(false);
  }

  static final public void comparison(Condition c) throws ParseException {
        Token t;
    t = jj_consume_token(COMPARISON);
         c.setPosition(t.beginLine,t.beginColumn);
         c.setPredicate(t.image);
         c.setPrimitiveComparison(true);
  }

  static final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static final private boolean jj_3R_30() {
    if (jj_3R_34()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_35()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static final private boolean jj_3R_29() {
    if (jj_3R_33()) return true;
    return false;
  }

  static final private boolean jj_3R_33() {
    if (jj_scan_token(DECIMAL_NUMBER)) return true;
    return false;
  }

  static final private boolean jj_3R_25() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_26()) {
    jj_scanpos = xsp;
    if (jj_3R_27()) {
    jj_scanpos = xsp;
    if (jj_3R_28()) {
    jj_scanpos = xsp;
    if (jj_3R_29()) return true;
    }
    }
    }
    return false;
  }

  static final private boolean jj_3R_26() {
    if (jj_3R_30()) return true;
    return false;
  }

  static final private boolean jj_3R_15() {
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static final private boolean jj_3_2() {
    if (jj_3R_13()) return true;
    return false;
  }

  static final private boolean jj_3R_20() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_2()) {
    jj_scanpos = xsp;
    if (jj_3R_24()) return true;
    }
    return false;
  }

  static final private boolean jj_3R_32() {
    if (jj_scan_token(INTEGER_NUMBER)) return true;
    return false;
  }

  static final private boolean jj_3R_28() {
    if (jj_3R_32()) return true;
    return false;
  }

  static final private boolean jj_3R_21() {
    if (jj_scan_token(COMMA)) return true;
    if (jj_3R_20()) return true;
    return false;
  }

  static final private boolean jj_3R_16() {
    if (jj_3R_20()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_21()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  static final private boolean jj_3R_23() {
    if (jj_scan_token(ARITHMETICOPERATION)) return true;
    return false;
  }

  static final private boolean jj_3R_18() {
    if (jj_3R_23()) return true;
    return false;
  }

  static final private boolean jj_3R_19() {
    if (jj_scan_token(NOT)) return true;
    return false;
  }

  static final private boolean jj_3R_35() {
    if (jj_scan_token(DOT)) return true;
    if (jj_3R_34()) return true;
    return false;
  }

  static final private boolean jj_3R_31() {
    if (jj_scan_token(STRING_LITERAL)) return true;
    return false;
  }

  static final private boolean jj_3R_22() {
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static final private boolean jj_3R_27() {
    if (jj_3R_31()) return true;
    return false;
  }

  static final private boolean jj_3R_14() {
    if (jj_3R_19()) return true;
    return false;
  }

  static final private boolean jj_3R_17() {
    if (jj_3R_22()) return true;
    return false;
  }

  static final private boolean jj_3R_12() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_14()) jj_scanpos = xsp;
    if (jj_3R_15()) return true;
    if (jj_scan_token(37)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(38)) return true;
    return false;
  }

  static final private boolean jj_3R_34() {
    if (jj_scan_token(NAME)) return true;
    return false;
  }

  static final private boolean jj_3R_13() {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_17()) {
    jj_scanpos = xsp;
    if (jj_3R_18()) return true;
    }
    if (jj_scan_token(39)) return true;
    if (jj_3R_16()) return true;
    if (jj_scan_token(40)) return true;
    return false;
  }

  static final private boolean jj_3_1() {
    if (jj_3R_12()) return true;
    return false;
  }

  static final private boolean jj_3R_24() {
    if (jj_3R_25()) return true;
    return false;
  }

  static private boolean jj_initialized_once = false;
  static public ParserTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  static public Token token, jj_nt;
  static private int jj_ntk;
  static private Token jj_scanpos, jj_lastpos;
  static private int jj_la;
  static public boolean lookingAhead = false;
  static private boolean jj_semLA;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[21];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_0();
      jj_la1_1();
   }
   private static void jj_la1_0() {
      jj_la1_0 = new int[] {0x2704c500,0x2704c500,0x200,0x0,0xf80000,0x30000,0x20,0x0,0x20,0x0,0x800,0x1000,0x0,0x20,0xd8000000,0x200,0x0,0xd8000000,0xd8000000,0x20,0x40000000,};
   }
   private static void jj_la1_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x4,0x0,0x0,0x0,0x4,0x0,0x4,0x0,0x0,0x4,0x0,0x10,0x0,0x4,0x0,0x0,0x0,0x10,};
   }
  static final private JJCalls[] jj_2_rtns = new JJCalls[2];
  static private boolean jj_rescan = false;
  static private int jj_gc = 0;

  public Parser(java.io.InputStream stream) {
     this(stream, null);
  }
  public Parser(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  You must");
      System.out.println("       either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new ParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }

  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 21; i++) jj_la1[i] = -1;
    for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
  }
